# iscc-service-generator

./: .dockerignore  .env  .gitignore  .hadolint.yaml  CHANGELOG.md  Dockerfile  README.md  docker-compose.demo-prod.yml  docker-compose.prod.yml  docker-compose.yml  manage.py  pyproject.toml
.github/workflows/: build-image.yml  test-image-build.yaml  test-image-build.yml
.scratch/: .gitignore
deploy/digital-ocean/: README.md  userdata-backend.sh  userdata-worker.sh
dev/: db_connection_check.py  demo.py  install.py  lf.py
docker/: entrypoint-dev.sh  entrypoint-prod.sh  qcluster-autoreload.sh  worker.sh
iscc_generator/: admin.py  api_v1.py  apps.py  base.py  download.py  models.py  schema.py  storage.py  tasks.py  uploadhandler.py  utils.py
iscc_generator/codegen/: base.py  build.py  fields.py  spec.py  spec.yaml
iscc_generator/migrations/: 0001_initial.py  0002_iscccode_embed_iscccode_metadata.py  0002_theme.py  0003_alter_iscccode_meta.py  0003_alter_iscccode_result_and_more.py  0003_iscccode_acquire_iscccode_license.py  0003_nft_fields.py  0004_alter_iscccode_acquire_alter_iscccode_description_and_more.py  0004_auto_20220219_2156.py  0004_nft.py  0004_rights_field.py  0005_alter_media_cid_alter_media_name_and_more.py  0005_nft_result.py  0005_refactor_nft_fields.py  0006_iscccode_creator.py  0007_nft_properties_alter_iscccode_description_and_more.py  0008_remove_nft_iscc_code_nft_media_id_animation_and_more.py
iscc_service_generator/: admin.py  api_v1.py  apps.py  asgi.py  main.py  settings.py  urls.py  wsgi.py
iscc_service_generator/fixtures/: admin_interface_theme_iscc.json
iscc_service_generator/settings/: __init__.py  pydjantic.py
tests/: .env  conftest.py  settings.py  test_api.py  test_api_iscc.py  test_api_media.py  test_api_nft.py  test_models.py  test_utils.py
