[tool.poetry]
name = "iscc-service-generator"
version = "0.1.0"
description = "ISCC Generator Web Service APP"
authors = ["Titusz <tp@iscc.foundation>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/iscc/iscc-service-generator"
keywords=["iscc", "microservice", "rest-api", "identifier", "media", "hash", "simhash"]

[tool.poetry.dependencies]
python = ">=3.8,<3.10"
Django = "^4.0.2"
django-ninja = "^0.16.2"
django-admin-interface = "^0.18.5"
uvicorn = "^0.17.1"
django-ulid = "^0.0.4"
django-model-utils = "^4.2.0"
blake3 = "^0.3.1"
humanize = "^3.14.0"
django-q = "^1.3.9"
iscc = "1.1.0b15"
django-constance = {extras = ["database"], version = "^2.8.0"}
django-json-widget = "^1.1.1"
django-object-actions = "^3.1.0"

[tool.poetry.dev-dependencies]
black = "^22.1.0"
poethepoet = "^0.12.2"
mkdocs-material = "^8.1.9"
pytest = "^6.2.5"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "iscc_service_generator.settings"

[tool.poe.tasks]
install = { cmd = "python -m dev.install", help = "Install app for development"}
